WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268029
REGRESSION (
273187@main
): [ iOS17 Debug arm64 ] ASSERTION FAILED:bool WTF::RefCountedBase::hasOneRef() in http/tests/workers/service/postmessage-after-terminate.https.html result of a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=268029
Summary
REGRESSION (273187@main): [ iOS17 Debug arm64 ] ASSERTION FAILED:bool WTF::Re...
Marta Darbinyan
Reported
2024-01-24 13:46:05 PST
Description: http/tests/workers/service/postmessage-after-terminate.https.html Is a flaky crash on iOS17 Debug arm64 since the change
273187@main
within service workers. This issue can be bisected to
273187@main
using the command: run-webkit-tests --root --ios-simulator --exit-after-n-failures 1 --debug http/tests/workers/service/postmessage-after-terminate.https.html History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fworkers%2Fservice%2Fpostmessage-after-terminate.https.html&flavor=wk2&style=debug&architecture=arm64&version_name=iOS%2017
Log errors: stderr: ASSERTION FAILED: !m_deletionHasBegun /Volumes/Data/worker/Apple-iOS-17-Simulator-Debug-Build/build/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/RefCounted.h(55) : bool WTF::RefCountedBase::hasOneRef() const 1 0x105096b78 WTFCrash 2 0x2c7a64660 WebCore::NetworkResourcesData::ResourceData::hasContent() const 3 0x2c63f0b94 WTF::RefCountedBase::hasOneRef() const 4 0x2c63f0a6c WTF::RefCountedBase::applyRefDerefThreadingCheck() const 5 0x2c7a6f2dc WTF::RefCountedBase::ref() const 6 0x2c95c29ac WTF::DefaultRefDerefTraits<WebCore::SWServer>::refIfNotNull(WebCore::SWServer*) 7 0x2c95c2968 WTF::RefPtr<WebCore::SWServer, WTF::RawPtrTraits<WebCore::SWServer>, WTF::DefaultRefDerefTraits<WebCore::SWServer>>::RefPtr(WebCore::SWServer*) 8 0x2c959d194 WTF::RefPtr<WebCore::SWServer, WTF::RawPtrTraits<WebCore::SWServer>, WTF::DefaultRefDerefTraits<WebCore::SWServer>>::RefPtr(WebCore::SWServer*) 9 0x2c959eb34 WebCore::SWServerWorker::protectedServer() const 10 0x2c9590384 WebCore::SWServerWorker::contextConnection() 11 0x2c959f2b8 WebCore::SWServerWorker::startTermination(WTF::CompletionHandler<void ()>&&) 12 0x2c9583e34 WebCore::SWServerWorker::terminate(WTF::CompletionHandler<void ()>&&) 13 0x2c9583880 WebCore::SWServer::~SWServer() 14 0x2c95842b0 WebCore::SWServer::~SWServer() 15 0x137daa5f0 std::__1::default_delete<WebCore::SWServer>::operator()[abi:v160006](WebCore::SWServer*) const 16 0x137daa5ac WTF::RefCounted<WebCore::SWServer, std::__1::default_delete<WebCore::SWServer>>::deref() const 17 0x137daa540 WTF::DefaultRefDerefTraits<WebCore::SWServer>::derefIfNotNull(WebCore::SWServer*) 18 0x137daa504 WTF::RefPtr<WebCore::SWServer, WTF::RawPtrTraits<WebCore::SWServer>, WTF::DefaultRefDerefTraits<WebCore::SWServer>>::~RefPtr() 19 0x137d737c4 WTF::RefPtr<WebCore::SWServer, WTF::RawPtrTraits<WebCore::SWServer>, WTF::DefaultRefDerefTraits<WebCore::SWServer>>::~RefPtr() 20 0x137d7333c WebKit::NetworkSession::~NetworkSession() 21 0x1375849c8 WebKit::NetworkSessionCocoa::~NetworkSessionCocoa() 22 0x1375849f4 WebKit::NetworkSessionCocoa::~NetworkSessionCocoa() 23 0x137584a20 WebKit::NetworkSessionCocoa::~NetworkSessionCocoa() 24 0x137ca8358 std::__1::default_delete<WebKit::NetworkSession>::operator()[abi:v160006](WebKit::NetworkSession*) const 25 0x137ca82c4 std::__1::unique_ptr<WebKit::NetworkSession, std::__1::default_delete<WebKit::NetworkSession>>::reset[abi:v160006](WebKit::NetworkSession*) 26 0x137ca824c std::__1::unique_ptr<WebKit::NetworkSession, std::__1::default_delete<WebKit::NetworkSession>>::~unique_ptr[abi:v160006]() 27 0x137c5b724 std::__1::unique_ptr<WebKit::NetworkSession, std::__1::default_delete<WebKit::NetworkSession>>::~unique_ptr[abi:v160006]() 28 0x137c5b330 WebKit::NetworkProcess::destroySession(PAL::SessionID, WTF::CompletionHandler<void ()>&&) 29 0x137152b50 auto void IPC::callMemberFunction<WebKit::NetworkProcess, WebKit::NetworkProcess, void (PAL::SessionID, WTF::CompletionHandler<void ()>&&), std::__1::tuple<PAL::SessionID>, void ()>(WebKit::NetworkProcess*, void (WebKit::NetworkProcess::*)(PAL::SessionID, WTF::CompletionHandler<void ()>&&), std::__1::tuple<PAL::SessionID>&&, WTF::CompletionHandler<void ()>&&)::'lambda'(auto&&...)::operator()<PAL::SessionID>(auto&&...) const 30 0x137152a8c decltype(std::declval<WebKit::NetworkProcess>()(std::declval<PAL::SessionID>())) std::__1::__invoke[abi:v160006]<void IPC::callMemberFunction<WebKit::NetworkProcess, WebKit::NetworkProcess, void (PAL::SessionID, WTF::CompletionHandler<void ()>&&), std::__1::tuple<PAL::SessionID>, void ()>(WebKit::NetworkProcess*, void (WebKit::NetworkProcess::*)(PAL::SessionID, WTF::CompletionHandler<void ()>&&), std::__1::tuple<PAL::SessionID>&&, WTF::CompletionHandler<void ()>&&)::'lambda'(auto&&...), PAL::SessionID>(WebKit::NetworkProcess&&, PAL::SessionID&&) 31 0x137152a60 decltype(auto) std::__1::__apply_tuple_impl[abi:v160006]<void IPC::callMemberFunction<WebKit::NetworkProcess, WebKit::NetworkProcess, void (PAL::SessionID, WTF::CompletionHandler<void ()>&&), std::__1::tuple<PAL::SessionID>, void ()>(WebKit::NetworkProcess*, void (WebKit::NetworkProcess::*)(PAL::SessionID, WTF::CompletionHandler<void ()>&&), std::__1::tuple<PAL::SessionID>&&, WTF::CompletionHandler<void ()>&&)::'lambda'(auto&&...), std::__1::tuple<PAL::SessionID>, 0ul>(WebKit::NetworkProcess&&, WebKit::NetworkProcess&&, std::__1::__tuple_indices<0ul>) com.apple.WebKit.Networking.Development terminated (pid 39921) for reason: crash LEAK: 18 WebPageProxy
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-24 13:46:27 PST
<
rdar://problem/121550392
>
EWS
Comment 2
2024-01-24 14:31:04 PST
Test gardening commit
273446@main
(f009f9f8c8db): <
https://commits.webkit.org/273446@main
> Reviewed commits have been landed. Closing PR #23196 and removing active labels.
Chris Dumez
Comment 3
2024-01-24 14:58:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23202
EWS
Comment 4
2024-01-24 21:27:43 PST
Committed
273467@main
(0963c19c0ab8): <
https://commits.webkit.org/273467@main
> Reviewed commits have been landed. Closing PR #23202 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug