REGRESSION (273187@main): [ iOS17 Debug arm64 ] ASSERTION FAILED:bool WTF::RefCountedBase::hasOneRef() in http/tests/workers/service/postmessage-after-terminate.https.html result of a flaky crash https://bugs.webkit.org/show_bug.cgi?id=268029 rdar://121550392

Unreviewed, very partial revert of 273187@main to address the assertion hit.

* LayoutTests/platform/ios-wk2/TestExpectations:
* Source/WebCore/workers/service/server/SWServerWorker.cpp:
(WebCore::SWServerWorker::contextConnection):

Canonical link: https://commits.webkit.org/273467@main